consistently pass start/finish times
